@@ -58,17 +58,10 @@ ext.platform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'wi
 
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
-// NetBeans will automatically add "run" and "debug" tasks relying on the
-// "mainClass" property. You may however define the property prior executing
-// tasks by passing a "-PmainClass=<QUALIFIED_CLASS_NAME>" argument.
-//
-// Note however, that you may define your own "run" and "debug" task if you
-// prefer. In this case NetBeans will not add these tasks but you may rely on
-// your own implementation.
-if (!hasProperty('mainClass')) {
-    ext.mainClass = 'tf.gpx.edit.main.GPXEditorManager'
+// TFE, 20251224: Updates for Java25 and Gradle 9
+application {
+    mainClass.set('tf.gpx.edit.main.GPXEditorManager')
 }
-mainClassName = 'tf.gpx.edit.main.GPXEditorManager'
 def appName='GPXEditor'
 group='tf.GPXEditor'
 version='5.10'
@@ -100,7 +93,7 @@ dependencies {
 //    def javafx_version='17.0.1'
 //    def javafx_version='19.0.2.1'
 //    def javafx_version='21.0.2'
-    def javafx_version='23.0.1'
+    def javafx_version='25.0.1'
     implementation "org.openjfx:javafx-base:$javafx_version:$platform"
     implementation "org.openjfx:javafx-graphics:$javafx_version:$platform"
     implementation "org.openjfx:javafx-controls:$javafx_version:$platform"
@@ -230,6 +223,10 @@ def newArgs = [ '--add-modules', 'javafx.controls,javafx.graphics,javafx.base,ja
                 '--add-opens', 'java.base/java.time=ALL-UNNAMED',
                 '--add-opens', 'java.base/java.time.zone=ALL-UNNAMED',
                 '--add-opens', 'java.base/sun.util.calendar=ALL-UNNAMED',
+                // TFE, 20251224: Updates for Java25 and Gradle 9
+                '--enable-native-access', 'javafx.graphics',
+                '--enable-native-access', 'javafx.web',
+                '--enable-native-access', 'ALL-UNNAMED',
     ]
     
 // extend Netbeans Gradle "Run" task
